# training-cell-git-docker-workshop

./: .dockerignore  .gitignore  Dockerfile  GUIDE_ETUDIANTS.md  README.md  pyproject.toml
src/website/: __init__.py  main.py
src/website/core/: config.py  database.py  init_db.py  models.py
src/website/shops/: group_1.py  group_12.py  group_17.py  group_19.py  group_2.py  group_3.py  test.py
src/website/static/css/: style.css
src/website/static/img/: sample1.jfif  sample2.jfif
src/website/static/js/: app.js
src/website/templates/: base.html  index.html  login.html  results.html  shop.html
