[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "app"
version = "0.1.0"
description = "A collaborative FastAPI project for learning Git branching, merging, and Docker containerization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.uvicorn]
app = "website.main:app"
reload = true
